--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,8 +27,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/vinyls">All Vinyls</a></li>
-          <li><a href="/records">About</a></li>
+          <li><a href="{% url 'vinyls' %}">All Vinyls</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
         </ul>
       </nav>
     </header>
