--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -3,7 +3,7 @@
 {% endblock %} {% block content %}
 
 <section class="logo-container">
-  <div class="cat-container">
+  <div class="vinyl-container">
     <img src="{% static 'images/records.jpg' %}" alt="Vinyls Collection" />
   </div>
   <img
