--- a/main_app/templates/vinyls/vinyls.html
+++ b/main_app/templates/vinyls/vinyls.html
@@ -1,20 +1,24 @@
 {% extends 'base.html' %} 
 {% load static %} 
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/vinyls/vinyls.css' %}"/>
+<link rel="stylesheet" href="{% static 'css/vinyls/vinyls.css' %}" />
 {% endblock %} 
 {% block content %}
 
 <section class="page-header">
   <h1>Vinyls</h1>
   <img src="{% static 'images/JayZ.jpg' %}" alt="In My Lifetime-Vol.1" />
-  <img src="{% static 'images/JimiHendrix.jpg' %}" alt="Experience Hendrix-The Best of Jimi Hendrix" />
+  <img
+    src="{% static 'images/JimiHendrix.jpg' %}"
+    alt="Experience Hendrix-The Best of Jimi Hendrix"
+  />
   <img src="{% static 'images/Drake.jpg' %}" alt="Views" />
 </section>
 
 <section class="card-container">
-    {% for vinyl in vinyls %}
-      <div class="card">
+  {% for vinyl in vinyls %}
+    <div class="card">
+      <a href="/vinyls/{{ vinyl.id }}">
         <div class="card-content">
           <div class="card-img-container">
             <img
@@ -27,8 +31,9 @@
           <p><strong>Genre:</strong> {{ vinyl.genre }}</p>
           <p>{{ vinyl.description }}</p>
         </div>
-      </div>
-    {% endfor %}
-  </section>
+      </a>
+    </div>
+  {% endfor %}
+</section>
 
 {% endblock %}
