Edit records to Records

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="{% static 'images/records.jpg'%}"
+      href="{% static 'images/Records.jpg'%}"
     />
     <title>The Vinyl Collector</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
@@ -20,7 +20,7 @@
       <div class="header-logo-container">
         <a href="/">
           <img
-            src="{% static 'images/records.jpg' %}"
+            src="{% static 'images/Records.jpg' %}"
             alt="The Vinyl Collector Logo"
           />
         </a>
