--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -4,10 +4,10 @@
 
 <section class="logo-container">
   <div class="vinyl-container">
-    <img src="{% static 'images/records.jpg' %}" alt="Vinyls Collection" />
+    <img src="{% static 'images/Records.jpg' %}" alt="Vinyls Collection" />
   </div>
   <img
-    src="{% static 'images/records.jpg' %}"
+    src="{% static 'images/Records.jpg' %}"
     alt="Text reads: Vinyl Collector"
   />
 </section>
