--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -4,12 +4,8 @@
 
 <section class="logo-container">
   <div class="vinyl-container">
-    <img src="{% static 'images/Records.jpg' %}" alt="Vinyls Collection" />
+    <img src="{% static 'images/records-collection.jpg' %}" alt="Vinyls Collection" />
   </div>
-  <img
-    src="{% static 'images/Records.jpg' %}"
-    alt="Text reads: Vinyl Collector"
-  />
 </section>
 
 {% endblock %}
