--- a/main_app/templates/vinyls/vinyls.html
+++ b/main_app/templates/vinyls/vinyls.html
@@ -7,12 +7,7 @@
 
 <section class="page-header">
   <h1>Vinyls</h1>
-  <img src="{% static 'images/JayZ.jpg' %}" alt="In My Lifetime-Vol.1" />
-  <img
-    src="{% static 'images/JimiHendrix.jpg' %}"
-    alt="Experience Hendrix-The Best of Jimi Hendrix"
-  />
-  <img src="{% static 'images/Drake.jpg' %}" alt="Views" />
+  <img src="{% static 'images/vinyl-cone.jpg' %}" alt="Records in an ice-cream cone" />
 </section>
 
 <section class="card-container">
@@ -22,7 +17,7 @@
         <div class="card-content">
           <div class="card-img-container">
             <img
-              src="{% static 'images/records.jpg' %}"
+              src="{% static 'images/vinyl-box.jpg' %}"
               alt="Collection of vinyl records"
             />
           </div>
