--- a/main_app/templates/vinyls/detail.html
+++ b/main_app/templates/vinyls/detail.html
@@ -1,19 +1,23 @@
-{% extends 'base.html' %} 
-{% load static %} 
-{% block head %}
+{% extends 'base.html' %} {% load static %} {% block head %}
 <link rel="stylesheet" href="{% static 'css/vinyls/vinyl-detail.css' %}" />
-{% endblock %} 
-{% block content %}
+{% endblock %} {% block content %}
 <section class="vinyl-container">
   <div class="vinyl-img">
-    <img src="{% static 'images/Records.jpg' %}" alt="A collection of records" />
+    <img
+      src="{% static 'images/vinyl-onigiri.jpg' %}"
+      alt="A collection of records"
+    />
   </div>
   <div class="vinyl-details">
     <h1 class="card-title">{{ vinyl.name }}</h1>
-          <p><strong>Artist:</strong> {{ vinyl.artist }}</p>
-          <p><strong>Genre:</strong> {{ vinyl.genre }}</p>
-          <p>{{ vinyl.description }}</p>
+    <p><strong>Artist:</strong> {{ vinyl.artist }}</p>
+    <p><strong>Genre:</strong> {{ vinyl.genre }}</p>
+    <p>{{ vinyl.description }}</p>
+
+    <div class="vinyl-actions">
+      <a href="{% url 'vinyl-update' vinyl.id %}" class="btn warn">Edit</a>
+      <a href="{% url 'vinyl-delete' vinyl.id %}" class="btn danger">Delete</a>
+    </div>
   </div>
 </section>
 {% endblock %}
-
