--- a/main_app/templates/vinyls/detail.html
+++ b/main_app/templates/vinyls/detail.html
@@ -20,4 +20,51 @@
     </div>
   </div>
 </section>
+
+<div class="feedings-toy-container">
+  <section class="feedings">
+    <div class="subsection-title">
+      <h2>Songs</h2>
+      <img
+        src="{% static 'images/cat-cone.svg' %}"
+        alt="An ice cream cone cat"
+      />
+      <img src="{% static 'images/cat-onigiri.svg' %}" alt="A cat as onigiri" />
+      <img
+        src="{% static 'images/kitty-kabob.svg' %}"
+        alt="A kabob of kittens"
+      />
+    </div>
+
+  <h3>Add a Song</h3>
+    <form action="{% url 'add-song' vinyl.id %}" method="post" class="subsection-content" autocomplete="off">
+      {% csrf_token %}
+      {{ song_form.as_p }}
+      <button type="submit" class="btn submit">Add Song</button>
+    </form>
+  <h3>Past Songs</h3>
+  {% if vinyl.song_set.all.count %}   
+    <table>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Mood</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for song in vinyl.song_set.all %}
+        <tr>
+          <td>{{song.date}}</td>
+          <td>{{song.get_mood_display}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %} 
+    <div class="subsection-content">
+      <p> {{vinyl.name}} has no songs!</p>
+    </div>
+  {% endif %}    
+  </section>
+</div>
 {% endblock %}
