Complete lab but errors with migrations

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -29,7 +29,9 @@
       <nav>
         <ul>
           <li><a href="{% url 'vinyls' %}">All Vinyls</a></li>
+          <li><a href="{% url 'playlist-index' %}">All Playlist</a></li>
           <li><a href="{% url 'vinyl-create' %}">Add a Vinyl</a></li>
+          <li><a href="{% url 'playlist-create' %}">Add Playlist</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
         </ul>
       </nav>
