--- a/main_app/templates/main_app/playlist_detail.html
+++ b/main_app/templates/main_app/playlist_detail.html
@@ -1,15 +1,12 @@
-{% extends 'base.html' %} 
-{% load static %} 
-{% block head %}
+{% extends 'base.html' %} {% load static %} {% block head %}
 <link rel="stylesheet" href="{% static 'css/playlist/playlist-detail.css' %}" />
-{% endblock %} 
-{% block content %}
+{% endblock %} {% block content %}
 
-<div class="card" style="border-color: {{ playlist.color }}">
-  <div class="card-bg" style="background-color: {{ playlist.color }}"></div>
+<div class="card">
+  <div class="card-bg"></div>
   <div class="card-content">
     <h2>{{ playlist.name }}</h2>
-    <p>My {{ playlist.color }} </p>
+    <p>My {{ playlist.description }}</p>
   </div>
 </div>
 <a href="{% url 'playlist-update' playlist.id %}" class="btn warn">Edit</a>
