--- a/main_app/static/css/vinyls/vinyl-detail.css
+++ b/main_app/static/css/vinyls/vinyl-detail.css
@@ -24,6 +24,13 @@
   margin-top: 20px;
 }
 
+.playlist-song-container {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+  align-items: center;
+}
+
 .subsection-title {
   display: flex;
   align-items: center;
@@ -34,11 +41,35 @@
   margin: 0 8px;
 }
 
+.song-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .color-block {
   opacity: 0.8;
   height: 25px;
   width: 25px;
   margin-right: 10px;
+}
+
+.unfed,
+.fed,
+.no-songs,
+.all-songs {
+  margin: 0;
+  font-weight: bold;
+}
+
+.unfed,
+.no-songs {
+  color: var(--danger);
+}
+
+.fed,
+.all-songs {
+  color: var(--submit);
 }
 
 .vinyl-details h1 {
@@ -63,6 +94,19 @@
   margin: 5px 0;
 }
 
+.playlist-song-container > section {
+  width: 80%;
+  min-width: 360px;
+  border: var(--borders);
+  border-radius: var(--card-border-radius);
+  padding: 10px;
+  box-shadow: var(--card-box-shadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
 .subsection-title img {
   height: 42px;
   margin-left: 8px;
@@ -70,6 +114,18 @@
 
 .subsection-title img:first-of-type {
   margin-left: 16px;
+}
+
+.playlist h2,
+.songs h2 {
+  font-size: 3.2rem;
+  margin: 0;
+}
+
+.playlist h3,
+.songs h3 {
+  font-size: var(--font-xl);
+  margin: 10px 0;
 }
 
 .subsection-content p,
@@ -82,6 +138,42 @@
 .subsection-content select {
   margin-left: 5px;
   padding: 3px;
+}
+
+.playlist table {
+  width: calc(100% - 16px);
+  text-align: left;
+  border-collapse: collapse;
+  margin: 0 8px;
+}
+
+.playlist td {
+  padding: 8px 5px;
+  font-size: var(--font-reg);
+}
+
+.playlist th {
+  font-size: var(--font-l);
+  padding: 5px 5px 0;
+  border-bottom: rgb(36, 116, 248) solid 2px;
+}
+
+.playlist tr:nth-child(even) {
+  background-color: #f3f3fd;
+}
+
+.song-container p {
+  margin: 12px 0;
+}
+
+.song-container a {
+  text-decoration: none;
+  color: #111;
+}
+
+.song-container .btn {
+  padding: 3px 10px;
+  margin-left: 10px;
 }
 
 #file-input {
@@ -107,5 +199,21 @@
     width: 25%;
     max-width: 250px;
     margin-right: 25px;
+  }
+
+  .playlist-song-container {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+
+  .playlist-song-container > section {
+    width: 45%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .playlist-song-container {
+    padding: 0 40px;
   }
 }
