--- a/main_app/templates/vinyls/detail.html
+++ b/main_app/templates/vinyls/detail.html
@@ -3,10 +3,10 @@
 {% endblock %} {% block content %}
 <section class="vinyl-container">
   <div class="vinyl-img">
-    <img
+    {% comment %} <img
       src="{% static 'images/vinyl-onigiri.jpg' %}"
       alt="A collection of records"
-    />
+    /> {% endcomment %}
   </div>
   <div class="vinyl-details">
     <h1 class="card-title">{{ vinyl.name }}</h1>
@@ -21,19 +21,19 @@
   </div>
 </section>
 
-<div class="feedings-toy-container">
-  <section class="feedings">
+<div class="playlist-song-container">
+  <section class="playlist">
     <div class="subsection-title">
       <h2>Songs</h2>
-      <img
+      {% comment %} <img
         src="{% static 'images/cat-cone.svg' %}"
         alt="An ice cream cone cat"
-      />
-      <img src="{% static 'images/cat-onigiri.svg' %}" alt="A cat as onigiri" />
+      /> {% endcomment %}
+      {% comment %} <img src="{% static 'images/cat-onigiri.svg' %}" alt="A cat as onigiri" />
       <img
         src="{% static 'images/kitty-kabob.svg' %}"
         alt="A kabob of kittens"
-      />
+      /> {% endcomment %}
     </div>
 
   <h3>Add a Song</h3>
@@ -42,20 +42,20 @@
       {{ song_form.as_p }}
       <button type="submit" class="btn submit">Add Song</button>
     </form>
-  <h3>Past Songs</h3>
+  <h3>Songs on album</h3>
   {% if vinyl.song_set.all.count %}   
     <table>
       <thead>
         <tr>
-          <th>Date</th>
           <th>Mood</th>
+          <th>Title</th>
         </tr>
       </thead>
       <tbody>
         {% for song in vinyl.song_set.all %}
         <tr>
-          <td>{{song.date}}</td>
           <td>{{song.get_mood_display}}</td>
+          <td>{{song.title}}</td>
         </tr>
         {% endfor %}
       </tbody>
