create add-playlist-song form

--- a/main_app/templates/main_app/playlist_detail.html
+++ b/main_app/templates/main_app/playlist_detail.html
@@ -5,14 +5,51 @@
 <div class="card">
   <div class="card-content">
     <h1><strong>{{ playlist.name }}<strong></h1>
-    <p>{{ playlist.description }}</p>
+    <p>{{ playlist.songs }}</p>
   </div>
 </div>
 
 <a href="{% url 'playlist-update' playlist.id %}" class="btn warn">Edit</a>
 <a href="{% url 'playlist-delete' playlist.id %}" class="btn danger">Delete</a>
 
-<section class="playlist-song-container">
+<div class="playlist-song-container">
+  <section class="playlist">
+    <div class="subsection-title">
+      <h2>Songs</h2>
+    </div>
+   
+  <h3>Add a Song</h3>
+    <form action="{% url 'add-playlist-song' playlist.id %}" method="post" class="subsection-content" autocomplete="off">
+      {% csrf_token %}
+      {{ song_form.as_p }}
+      <button type="submit" class="btn submit">Add Song</button>
+    </form>
+  <h3>Songs on album</h3>
+  {% if vinyl.song_set.all.count %}   
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Duration</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for song in playlist.song_set.all %}
+        <tr>
+          <td>{{song.get_mood_display}}</td>
+          <td>{{song.title}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% else %} 
+    <div class="subsection-content">
+      <p> {{playlist.name}} has no songs!</p>
+    </div>
+  {% endif %}    
+  </section>
+
+{% comment %} <section class="playlist-song-container">
   <div class="subsection-title">
     <h2>Songs</h2>
   </div>
@@ -28,6 +65,6 @@
     </div>
     {% endfor %}
   </div>
-</section>
+</section> {% endcomment %}
 
 {% endblock %}
