--- a/main_app/templates/main_app/playlist_list.html
+++ b/main_app/templates/main_app/playlist_list.html
@@ -7,17 +7,16 @@
 
 <section class="page-header">
   <h1>Playlist</h1>
-  <img src="{% static 'images/vinyl-cone' %}" alt="Vinyls in an ice cream cone" />  
+  {% comment %} <img src="{% static 'images/vinyl-cone' %}" alt="Vinyls in an ice cream cone" />   {% endcomment %}
 </section>
 
 <section class="card-container">
   {% for playlist in playlist_list %}
-    <div class="card" style="border-color: {{ playlist.color }}">
-      <div class="card-bg" style="background-color: {{ playlist.color }}"></div>
+  <div class="playlist-song-container">  
       <a href="{% url 'playlist-detail' playlist.id %}">
         <div class="card-content">
           <h2>{{ playlist.name }}</h2>
-          <p>A {{ playlist.color }} Playlist</p>
+          <p>{{ playlist.songs }}</p>
         </div>
       </a>
     </div>
