--- a/main_app/static/css/playlist/playlist-detail.css
+++ b/main_app/static/css/playlist/playlist-detail.css
@@ -50,3 +50,222 @@ main {
   font-size: var(--font-reg);
   z-index: 1;
 }
+
+.playlist-container {
+  padding: 35px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.playlist-img {
+  width: 75%;
+  max-width: 350px;
+}
+
+.usr-img {
+  width: 100%;
+  border-radius: var(--card-border-radius);
+}
+
+.playlist-details {
+  width: 98%;
+}
+
+.playlist-actions {
+  margin-top: 20px;
+}
+
+.playlist-song-container {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+  align-items: center;
+}
+
+.subsection-title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+
+.subsection-content {
+  margin: 0 8px;
+}
+
+.song-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.color-block {
+  opacity: 0.8;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+}
+
+
+.no-songs,
+.all-songs {
+  margin: 0;
+  font-weight: bold;
+}
+
+
+.no-songs {
+  color: var(--danger);
+}
+
+
+.all-songs {
+  color: var(--submit);
+}
+
+.playlist-details h1 {
+  font-size: var(--font-xxl);
+  margin: 15px 0 3px;
+}
+
+.playlist-details h2 {
+  font-size: var(--font-xl);
+  margin: 0 0 10px;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.playlist-details h3 {
+  margin: 20px 0 10px;
+  font-size: var(--font-l);
+}
+
+.playlist-details p {
+  font-size: var(--font-reg);
+  margin: 5px 0;
+}
+
+.playlist-song-container > section {
+  width: 80%;
+  min-width: 360px;
+  border: var(--borders);
+  border-radius: var(--card-border-radius);
+  padding: 10px;
+  box-shadow: var(--card-box-shadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.subsection-title img {
+  height: 42px;
+  margin-left: 8px;
+}
+
+.subsection-title img:first-of-type {
+  margin-left: 16px;
+}
+
+.playlist h2,
+.songs h2 {
+  font-size: 3.2rem;
+  margin: 0;
+}
+
+.playlist h3,
+.songs h3 {
+  font-size: var(--font-xl);
+  margin: 10px 0;
+}
+
+.subsection-content p,
+.subsection-content input,
+.subsection-content select {
+  font-size: var(--font-l);
+}
+
+.subsection-content input,
+.subsection-content select {
+  margin-left: 5px;
+  padding: 3px;
+}
+
+.playlist table {
+  width: calc(100% - 16px);
+  text-align: left;
+  border-collapse: collapse;
+  margin: 0 8px;
+}
+
+.playlist td {
+  padding: 8px 5px;
+  font-size: var(--font-reg);
+}
+
+.playlist th {
+  font-size: var(--font-l);
+  padding: 5px 5px 0;
+  border-bottom: rgb(36, 116, 248) solid 2px;
+}
+
+.playlist tr:nth-child(even) {
+  background-color: #f3f3fd;
+}
+
+.song-container p {
+  margin: 12px 0;
+}
+
+.song-container a {
+  text-decoration: none;
+  color: #111;
+}
+
+.song-container .btn {
+  padding: 3px 10px;
+  margin-left: 10px;
+}
+
+#file-input {
+  overflow: hidden;
+  position: absolute;
+  width: 0.1px;
+  height: 0.1px;
+}
+
+#file-name {
+  margin-bottom: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+  .playlist-container {
+    padding: 35px 30px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+  }
+
+  .playlist-img {
+    width: 25%;
+    max-width: 250px;
+    margin-right: 25px;
+  }
+
+  .playlist-song-container {
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+
+  .playlist-song-container > section {
+    width: 45%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .playlist-song-container {
+    padding: 0 40px;
+  }
+}
