--- a/main_app/static/css/playlist/playlist-detail.css
+++ b/main_app/static/css/playlist/playlist-detail.css
@@ -1,271 +1,117 @@
-main {
+
+.main {
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  align-items: center;
   justify-content: flex-start;
-  min-height: auto;
+  min-height: 100vh;
+  padding: 40px;  
 }
+
 
 .card {
-  width: 224px;
-  height: 224px;
-  margin: 25px 25px 15px 40px;
-  border: solid 2px;
-  box-shadow: var(--card-box-shadow);
-  position: relative;
-}
-
-.card-bg {
-  opacity: 0.4;
-  position: absolute;
-  display: inline-flex;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  max-width: 400px;
+  margin: 30px 0;  
+  padding: 25px;   
+  border: solid 2px #ddd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 10px;
 }
 
 .card-content {
-  padding: 15px;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  flex-direction: column;
-  color: var(--text-color);
-}
-
-.btn {
-  margin-bottom: 15px;
-}
-
-.card h2 {
-  margin: 7px 0;
-  font-size: var(--font-xl);
-  z-index: 1;
-}
-
-.card p {
-  margin: 0;
-  font-size: var(--font-reg);
-  z-index: 1;
-}
-
-.playlist-container {
-  padding: 35px 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
-.playlist-img {
-  width: 75%;
-  max-width: 350px;
-}
-
-.usr-img {
-  width: 100%;
-  border-radius: var(--card-border-radius);
-}
-
-.playlist-details {
-  width: 98%;
-}
-
-.playlist-actions {
-  margin-top: 20px;
-}
 
 .playlist-song-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  grid-gap: 30px;  
+  width: 100%;
+  padding: 30px 0;
+}
+.playlist-song-container section {
+  background-color: #f9f9f9;
+  padding: 25px;  
+  border-radius: 10px;
+  box-shadow: var(--card-box-shadow);
   display: flex;
   flex-direction: column;
-  padding-bottom: 20px;
   align-items: center;
+  justify-content: space-between;
 }
+
 
 .subsection-title {
   display: flex;
-  align-items: center;
-  margin-bottom: 12px;
+  justify-content: center;
+  margin-bottom: 25px;  
+  font-weight: bold;
+  font-size: 1.2em;
 }
 
-.subsection-content {
-  margin: 0 8px;
-}
 
 .song-container {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
-}
-
-.color-block {
-  opacity: 0.8;
-  height: 25px;
-  width: 25px;
-  margin-right: 10px;
-}
-
-
-.no-songs,
-.all-songs {
-  margin: 0;
-  font-weight: bold;
-}
-
-
-.no-songs {
-  color: var(--danger);
-}
-
-
-.all-songs {
-  color: var(--submit);
-}
-
-.playlist-details h1 {
-  font-size: var(--font-xxl);
-  margin: 15px 0 3px;
-}
-
-.playlist-details h2 {
-  font-size: var(--font-xl);
-  margin: 0 0 10px;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-.playlist-details h3 {
-  margin: 20px 0 10px;
-  font-size: var(--font-l);
-}
-
-.playlist-details p {
-  font-size: var(--font-reg);
-  margin: 5px 0;
-}
-
-.playlist-song-container > section {
-  width: 80%;
-  min-width: 360px;
-  border: var(--borders);
-  border-radius: var(--card-border-radius);
-  padding: 10px;
-  box-shadow: var(--card-box-shadow);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.subsection-title img {
-  height: 42px;
-  margin-left: 8px;
-}
-
-.subsection-title img:first-of-type {
-  margin-left: 16px;
-}
-
-.playlist h2,
-.songs h2 {
-  font-size: 3.2rem;
-  margin: 0;
-}
-
-.playlist h3,
-.songs h3 {
-  font-size: var(--font-xl);
-  margin: 10px 0;
-}
-
-.subsection-content p,
-.subsection-content input,
-.subsection-content select {
-  font-size: var(--font-l);
-}
-
-.subsection-content input,
-.subsection-content select {
-  margin-left: 5px;
-  padding: 3px;
-}
-
-.playlist table {
-  width: calc(100% - 16px);
-  text-align: left;
-  border-collapse: collapse;
-  margin: 0 8px;
-}
-
-.playlist td {
-  padding: 8px 5px;
-  font-size: var(--font-reg);
-}
-
-.playlist th {
-  font-size: var(--font-l);
-  padding: 5px 5px 0;
-  border-bottom: rgb(36, 116, 248) solid 2px;
-}
-
-.playlist tr:nth-child(even) {
-  background-color: #f3f3fd;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 15px; 
 }
 
 .song-container p {
-  margin: 12px 0;
-}
-
-.song-container a {
-  text-decoration: none;
-  color: #111;
+  margin: 0;
+  font-size: 1em;
 }
 
 .song-container .btn {
-  padding: 3px 10px;
-  margin-left: 10px;
+  padding: 10px 20px; 
+  font-size: 1em;
 }
 
-#file-input {
-  overflow: hidden;
-  position: absolute;
-  width: 0.1px;
-  height: 0.1px;
+
+.playlist table {
+  width: 100%;
+  margin: 25px 0;  
+  border-collapse: collapse;
 }
 
-#file-name {
-  margin-bottom: 10px;
+.playlist th, .playlist td {
+  text-align: left;
+  padding: 12px;  
+  border-bottom: 1px solid #ddd;
 }
 
-@media only screen and (min-width: 768px) {
-  .playlist-container {
-    padding: 35px 30px;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
-  }
-
-  .playlist-img {
-    width: 25%;
-    max-width: 250px;
-    margin-right: 25px;
-  }
-
-  .playlist-song-container {
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: flex-start;
-  }
-
-  .playlist-song-container > section {
-    width: 45%;
-  }
+.playlist th {
+  font-size: 1.1em;
 }
 
-@media only screen and (min-width: 1024px) {
-  .playlist-song-container {
-    padding: 0 40px;
-  }
+.playlist td {
+  font-size: 1em;
+}
+
+
+.btn {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 12px 25px;  
+  text-align: center;
+  font-size: 1em;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: 10px;  
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+.no-song {
+  font-size: ​⬤
 }
